PR c++/7320 	* rtti.c (get_tinfo_decl): Set DECL_COMDAT.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55516 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-17  Scott Snyder <snyder@fnal.gov>
+
+	PR c++/7320
+	* rtti.c (get_tinfo_decl): Set DECL_COMDAT.
+
 2002-07-12  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (add_method): Correct handling of conversion operators.
