PR c++/4802, c++/5387 	* decl.c (make_typename_type): Use enforce_access.
	* g++.dg/template/access2.C: New test.
	* g++.dg/template/access3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55517 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-17  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/4802, c++/5387
+	* decl.c (make_typename_type): Use enforce_access.
+
 2002-07-17  Scott Snyder <snyder@fnal.gov>
 
 	PR c++/7320
