lib1funcs.asm (udivsi3_i4): Implement SHcompact version in SHmedia code.
	* lib1funcs.asm (udivsi3_i4): Implement SHcompact version in
	SHmedia code.

From-SVN: r55533

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,7 @@
-Wed Jul 17 17:05:27 2002  J"orn Rennecke <joern.rennecke@superh.com>
+Wed Jul 17 17:08:06 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* lib1funcs.asm (udivsi3_i4): Implement SHcompact version in
+	SHmedia code.
 
 	* sh.md (cmpgtudi_media): Remove spurious @.
 
