--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-17  Rodney Brown  <rbrown64@csc.com.au>
+
+	* config/i386/i386.c (ix86_expand_int_movcc): In the general case
+	suppress addition when either ct or cf are zero.
+
 2002-06-17  Eric Botcazou <ebotcazou@multimania.com>
             Glen Nakamura <glen@imodulo.com>
 
