--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 17 19:23:32 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* regrename.c (maybe_mode_change): New function.
+	(find_oldest_value_reg, copyprop_hardreg_forward_1): Use it.
+
 2002-07-17  Rodney Brown  <rbrown64@csc.com.au>
 
 	* config/i386/i386.c (ix86_expand_int_movcc): In the general case
