--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-18  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.dg/nest.c: New.
+
 2002-07-17  Eric Botcazou  <ebotcazou@multimania.com>
 
 	* gcc.c-torture/execute/loop-2e.x: Let the testcase
