--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-18  Richard Henderson  <rth@redhat.com>
+
+	PR optimization/7147
+	* ifcvt.c (noce_get_condition): Make certain that the condition
+	is valid at JUMP.
+
 2002-07-16  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config/cris/linux.h (CRIS_LINK_SUBTARGET_SPEC): Don't
