* pa.c (output_deferred_plabels): Remove unused millicode enum mulU.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55562 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa.c (output_deferred_plabels): Remove unused millicode enum mulU.
+
 2002-07-18  Richard Henderson  <rth@redhat.com>
 
 	PR optimization/7147
