--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-19  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* configure.in (sh[34]*-*-linux*): Add brackets.
+	* configure: Regenerate.
+
 2002-07-18  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	* Makefile.am: Add SH support.
