[ ChangeLog ] 2002-07-19  Chris Demetriou  <cgd@broadcom.com>
        * gcc.c (cpp_options): Include "%1" (cc1_spec).

[ cp/ChangeLog ]
2002-07-19  Chris Demetriou  <cgd@broadcom.com>

        * lang-specs.h (@c++): Include "%2" (cc1plus_spec) wherever
        cpp_options is included.

From-SVN: r55591

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-19  Chris Demetriou  <cgd@broadcom.com>
+
+	* lang-specs.h (@c++): Include "%2" (cc1plus_spec) wherever
+	cpp_options is included.
+
 2002-07-17  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/2862, c++/2863
