--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-19  Chris Demetriou  <cgd@broadcom.com>
+
+	* gcc.c (cpp_options): Include "%1" (cc1_spec).
+
 2002-07-19  Richard Henderson  <rth@redhat.com>
 
 	* loop.c (loop_givs_rescan): Delete the REG_EQUAL note, not the insn.
